blog post example

--- a/10_vuejs/components.html
+++ b/10_vuejs/components.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <div id="app">
-    <blog title="my blog" v-bind:posts="blog_posts"></blog>
+    <blog blog_title="my blog" v-bind:posts="blog_posts"></blog>
   </div>
   <script src="components.js"></script>
 </body>
