--- a/10_vuejs/components.html
+++ b/10_vuejs/components.html
@@ -1,12 +1,13 @@
 <html>
 <head>
 <script src="https://unpkg.com/vue"></script>
-<script src="https://unpkg.com/vue-router@2.0.0/dist/vue-router.js"></script>
+<script src="https://unpkg.com/vue-router@2.5.0/dist/vue-router.js"></script>
 </head>
 
 <body>
   <div id="app">
-    <blog blog_title="my blog" v-bind:posts="blog_posts"></blog>
+    <!--<blog blog_title="my blog" v-bind:posts="blog_posts"></blog>-->
+    <router-view></router-view>
   </div>
   <script src="components.js"></script>
 </body>
